# checkers_cpp

./: .gitignore  CMakeLists.txt  README.md
include/: ai.h  checkers.h  event_manager.h  game.h  game_board.h  game_manager.h  game_state.h  game_window.h  templates.h  texture_loader.h  texture_manager.h  tree.h
src/: ai.cpp  checkers.cpp  event_manager.cpp  game.cpp  game_board.cpp  game_manager.cpp  game_state.cpp  game_window.cpp  main.cpp  templates.cpp  texture_loader.cpp  texture_manager.cpp  tree.cpp
